<resources>
    <string name="app_name">zxcvNetworkTool</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="settings">Settings</string>
    <string name="test">Test Network</string>
    <string name="results">Results</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_test">Test Network</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="device_title">Device Information</string>
    <string name="device">Device Information</string>
    <string name="test_title">Networks</string>
    <string name="title_activity_edit_network">EditNetworkActivity</string>
    <string name="title_activity_add_network">AddNetworkActivity</string>
    <string name="edit">Configure Networks</string>
    <string name="title_activity_configure">Configure Networks</string>
</resources>
