<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/m"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/txtTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:minHeight="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="76dp"
        android:id="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtTitle"
        tools:context=".MainActivity">

        <!--android:layout_below="@+id/btnSettings"  android:background="@drawable/bgcube"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:id="@+id/btnTest"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/btnEdit"
            android:layout_alignEnd="@+id/btnEdit"
            android:layout_alignLeft="@+id/btnEdit"
            android:layout_alignStart="@+id/btnEdit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device"
            android:id="@+id/btnResults"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/btnEdit"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/btnSettings"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/btnResults"
            android:layout_alignRight="@+id/btnResults"
            android:layout_alignEnd="@+id/btnResults"
            android:layout_alignLeft="@+id/btnEdit"
            android:layout_alignStart="@+id/btnEdit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/btnAbout"
            android:layout_below="@+id/btnSettings"
            android:layout_alignLeft="@+id/btnEdit"
            android:layout_alignStart="@+id/btnSettings"
            android:layout_alignRight="@+id/btnEdit"
            android:layout_alignEnd="@+id/btnSettings" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            android:layout_below="@+id/btnTest"
            android:text="@string/edit"
            android:layout_alignRight="@+id/btnResults"
            android:layout_alignEnd="@+id/btnResults" />
    </RelativeLayout>

</RelativeLayout>

